<resources>
    <string name="app_name">My Face</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- side menu text -->
    <string name="profle">Profile</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="cards">Card organizer</string>
    <string name="rate_us">Rate Us</string>
    <string name="logout">Logout</string>


    <string name="register">Register Now</string>
    <string name="name">Name</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="singup">Sign Up</string>
    <string name="login">Login</string>
    <string name="already">Already Registered?</string>
    <string name="not_register">Not Registered Yet?</string>
    <string name="show">Show</string>
    <string name="login_account">Login Account</string>
    <string name="forgot">Forget Password</string>
    <string name="choose_card">Choose Cards</string>
    <string name="my_cards">My Cards</string>
    <string name="shared_cards">Shared Cards</string>
    <string name="want_connect">Wants to connect</string>
    <string name="recieved_card">you have received a new card</string>
    <string name="account_setting">Account Settings</string>
    <string name="get_premium">Get Premium</string>
    <string name="tos">Terms &amp; Conditions</string>


</resources>
