<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SignUpFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/logo1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"/>

    <TextView
        android:id="@+id/account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_below="@id/logo"
        android:textSize="22sp"
        android:textStyle="bold"
        android:fontFamily="@font/poppin_light"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15sp"/>

    <EditText
        android:id="@+id/et_signup_name"
        android:layout_below="@id/account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25sp"
        android:layout_marginRight="25sp"
        android:layout_marginTop="20sp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"/>


    <EditText
        android:id="@+id/et_signup_email"
        android:layout_below="@id/et_signup_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25sp"
        android:layout_marginRight="25sp"
        android:layout_marginTop="20sp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"/>

    <EditText
        android:id="@+id/et_signup_password"
        android:layout_below="@id/et_signup_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25sp"
        android:layout_marginRight="25sp"
        android:layout_marginTop="20sp"
        android:inputType="textEmailAddress"
        android:hint="@string/password"/>


    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/singup"
        android:layout_below="@id/et_signup_password"
        android:layout_marginTop="30sp"
        android:layout_marginRight="30sp"
        android:layout_marginLeft="30sp"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"/>



    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10sp">
        <TextView
            android:id="@+id/already_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already"
            android:textSize="18sp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_aleady_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginLeft="5sp"
            android:textColor="@color/colorPrimary"
            android:layout_alignBaseline="@id/already_register"
            android:layout_toRightOf="@id/already_register" />
    </RelativeLayout>

</RelativeLayout>